feat: upgrade to yaci-store 0.1.4, yaci-core 0.3.7 which has store.continue-on-parse-error in case there is a problem processing a block (#502)
